openshift/kustomize/kafka/rest-proxy/base/service.yaml
---
# Open up ports to communicate with the app.
kind: Service
apiVersion: v1
metadata:
  name: kafka-rest-proxy
  namespace: default
  annotations:
    description: Exposes and load balances the application pods.
  labels:
    name: kafka-rest-proxy
    part-of: tno
    version: 1.0.0
    component: kafka-rest-proxy
    managed-by: kustomize
    created-by: jeremy.foster
spec:
  ports:
    - name: 8082-tcp
      port: 8082
      protocol: TCP
      targetPort: 8082
  selector:
    part-of: tno
    component: kafka-rest-proxy
  sessionAffinity: None
  type: ClusterIP
