openshift/kustomize/kafka/rest-proxy/base/route.yaml
# The route for the app.
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: kafka-rest-proxy
  namespace: default
  annotations:
    haproxy.router.openshift.io/rewrite-target: /
  labels:
    name: kafka-rest-proxy
    part-of: tno
    version: 1.0.0
    component: kafka-rest-proxy
    managed-by: kustomize
    created-by: jeremy.foster
spec:
  host: tno-dev.apps.silver.devops.gov.bc.ca
  path: /kafka
  port:
    targetPort: 8082-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
    # caCertificate: ""
    # certificate: ""
    # key: ""
  to:
    kind: Service
    name: kafka-rest-proxy
    weight: 100
